Rewrok ignorePackages option
-Rename ignorePackages to ignoreSections
-Extend option to also ignore classes and methods
-Extend test cases to test all option